# CTP_Md_Client_Trader_TCP

./: README.md
TCPC/: CMakeLists.txt
TCPC/doc/: orderConfig1.ini
TCPC/inc/: Ini.h
TCPC/src/: CMakeLists.txt  main.cpp
TCPMd/: CMakeLists.txt
TCPMd/doc/: subConfig.ini
TCPMd/inc/: CMdSpi.h  CTraderSpi.h  Ini.h
TCPMd/src/: CMakeLists.txt  CMdSpi.cpp  Ini.cpp  main.cpp
TCPS/doc/: orderConfig.ini  orderConfig1.ini
TCPS/src/: main.cpp
TCPTrader/: CMakeLists.txt
TCPTrader/doc/: loginConfig.ini  orderConfig2.ini
TCPTrader/inc/: CTraderSpi.h
TCPTrader/src/: CMakeLists.txt  CTraderSpi.cpp  Ini.cpp  main.cpp
testUDPC/: CMakeLists.txt
testUDPC/doc/: config.ini  loginConfig.ini  orderConfig.ini
testUDPC/src/: CMakeLists.txt  main.cpp
testUDPS/: CMakeLists.txt
testUDPS/src/: CMakeLists.txt  CTraderSpi.cpp  main.cpp
