CMAKE_MINIMUM_REQUIRED (VERSION 3.5)
PROJECT (TCPS)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(SOURCE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/src)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

MESSAGE(STATUS "Project name is " ${PROJECT})
MESSAGE(STATUS "This is EXECUTE dir " ${EXECUTABLE_OUTPUT_PATH})
MESSAGE(STATUS "This is SOURCE dir " ${SOURCE_OUTPUT_PATH})
MESSAGE(STATUS "This is LIBRARY dir " ${LIBRARY_OUTPUT_PATH})

# include h files
ADD_COMPILE_OPTIONS(-std=c++11 -g)
INCLUDE_DIRECTORIES(inc)
ADD_SUBDIRECTORY(src)








