SET(CLASS_FILE CMdSpi Ini)
SET(MAIN_FILE main)
SET(CTP_SO thostmduserapi)

# compile so files and a files
FOREACH(f ${CLASS_FILE})
	ADD_LIBRARY(${f} SHARED ${f}.cpp)
	# ADD_LIBRARY(${f}_static STATIC ${f}.cpp)
	# SET_TARGET_PROPERTIES(${f} PROPERTIES VERSION 1.2 SOVERSION 1)
	# SET_TARGET_PROPERTIES(${f}_static PROPERTIES OUTPUT_NAME "${f}")
	SET_TARGET_PROPERTIES(${f} PROPERTIES CLEAN_DIRECT_OUTPUT 1)
	# SET_TARGET_PROPERTIES(${f}_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
ENDFOREACH(f)

# link all .so
ADD_COMPILE_OPTIONS(-std=c++11 -g)
LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})
ADD_EXECUTABLE(Md ${MAIN_FILE}.cpp)
TARGET_LINK_LIBRARIES(Md ${CTP_SO} ${CLASS_FILE})
